--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "vite": "^4.2.0"
   },
   "dependencies": {
+    "@types/jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5",
     "uuid": "^9.0.0"
   }
 }
